--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,9 @@
 @import "globol";
 @import "reset";
 
+.scroll{
+  overflow: hidden;
+}
 #header{
   background: rgba(255, 255, 255, 0.37);
   position: fixed;
@@ -390,371 +393,6 @@
 }
 
 
-//#hero{
-//  background: url("../img/dad.png") no-repeat center/cover ;
-//  min-height: 100vh;
-//  padding-top: 100px;
-//  .hero{
-//    &--left2{
-//      padding: 60px 0;
-//      p{
-//        font-family: 'Gilroy-SemiBold',sans-serif;
-//        font-size: 22px;
-//        color: black;
-//        padding: 20px 0;
-//      }
-//      h1{
-//        font-weight: 800;
-//        font-size: 60px;
-//        color: #000000;
-//      }
-//      h4{
-//        font-weight: 400;
-//        font-size: 20px;
-//        color:#757095;;
-//        padding: 20px 0;
-//      }
-//    }
-//    &--block{
-//      &__text{
-//        display: flex;
-//        align-items: center;
-//        justify-content: space-around;
-//        width: 552px;
-//        height: 100px;
-//        background: #FFFFFF;
-//        box-shadow: 0 4.35199px 134.912px rgba(0, 0, 0, 0.1);
-//        &--address{
-//
-//          h5{
-//            font-weight: 700;
-//            font-size: 16px;
-//            color: rgba(0, 0, 0, 0.55);
-//            padding: 5px 0;
-//          }
-//          h4{
-//            font-weight: 700;
-//            font-size: 24px;
-//            color: rgba(34, 34, 34, 0.82);
-//          }
-//        }
-//      .jol{
-//        transition: .4s;
-//        cursor:pointer;
-//        background: #1B1C31;
-//        border-radius: 1px;
-//        font-weight:  600;
-//        font-size: 14px;
-//        width: 211px;
-//        height: 54px;
-//        color:#FFFFFF;
-//        &:hover {
-//          color: blue;
-//          transform: scale(1.1);
-//          border: 1px solid black;
-//          background: rgba(241, 241, 241, 0.49);
-//
-//      }
-//    }
-//  }
-//}
-//    &--food{
-//      display: flex;
-//      align-items: center;
-//      justify-content: flex-start;
-//
-//
-//      &__soul{
-//       h1{
-//         display: flex;
-//         align-items: center;
-//         font-weight: 400;
-//         font-size: 17px;
-//         color: #757095;
-//         margin: 0 20px;
-//
-//         ion-icon{
-//          color: #F57059;
-//           font-size: 19px;
-//           margin: 20px 5px ;
-//       }
-//
-//        }
-//      }
-//
-//}
-//    hr{
-//      background: #C4C4C4;
-//      width: 1150px;
-//      height: 1px;
-//    }
-//
-//
-//  &--right {
-//    transform: rotate(-45deg);
-//
-//    &__block {
-//      display: flex;
-//      align-items: center;
-//      margin: 18px 0;
-//
-//      &--block1 {
-//        padding-top: 15px;
-//        width: 207.59px;
-//        height: 106.16px;
-//        background: #FFFFFF;
-//        box-shadow: 0 3.79155px 117.538px rgba(0, 0, 0, 0.1);
-//        margin: 0 15px;
-//
-//        p {
-//          font-weight: 400;
-//          font-size: 11.3746px;
-//          color: #000000;
-//
-//        }
-//
-//        &__item {
-//          display: flex;
-//          align-items: center;
-//          justify-content: center;
-//          flex-direction: column;
-//          position: relative;
-//
-//          h5 {
-//            font-weight: 800;
-//            font-size: 19px;
-//            color: #000000;
-//          }
-//
-//          &--tex {
-//            display: flex;
-//            align-items: center;
-//            justify-content: space-between;
-//            width: 80%;
-//            padding: 10px 0;
-//            h5{
-//              font-weight: 800;
-//              font-size: 20.8535px;
-//              color: #000000;
-//            }
-//            p{
-//              font-weight: 700;
-//              font-size: 13.2704px;
-//              color: #FDBC64;
-//            }
-//
-//
-//          }
-//
-//          &--img {
-//            position: absolute;
-//            top: 5px;
-//            transform: rotate(45deg);
-//          }
-//        }
-//
-//        &__text {
-//          display: flex;
-//          align-items: center;
-//          padding: 0 50px;
-//        }
-//      }
-//    }
-//
-//    &__product {
-//      &--left {
-//        transform: rotate(-90deg);
-//        margin: 15px 0;
-//        padding: 25px 5px;
-//        width: 167px;
-//        height: 100px;
-//        background: rgb(255, 255, 255);
-//        box-shadow: 0 69.0436px 55.2349px rgba(0, 0, 0, 0.03), 0 44.7505px 32.3482px rgba(0, 0, 0, 0.0227778), 0px 26.5946px 17.5933px rgba(0, 0, 0, 0.0182222), 0px 13.8087px 8.97567px rgba(0, 0, 0, 0.015), 0px 5.62578px 4.50062px rgba(0, 0, 0, 0.0117778), 0px 1.27859px 2.17359px rgba(0, 0, 0, 0.00722222);
-//        border-radius: 6.90436px;
-//
-//        &__img {
-//          transform: rotate(135deg);
-//        }
-//
-//        p {
-//          font-family: 'Gilroy-SemiBold',sans-serif;
-//          font-size: 9.6661px;
-//          color: #000000;
-//        }
-//        h6{
-//          font-weight: 700;
-//          font-size: 11.047px;
-//          color: #000000;
-//          padding-top: 10px;
-//        }
-//      }
-//    }
-//
-//    &__main {
-//      width: 344px;
-//      height: 363px;
-//      z-index: 0;
-//      background: rgb(255, 255, 255);
-//      border-radius: 9.47887px;
-//
-//      &--bar {
-//        display: flex;
-//        align-items: center;
-//        justify-content: center;
-//        padding: 10px 0;
-//        position: relative;
-//
-//        button {
-//          color: #8896A6;
-//          font-size: 10px;
-//          padding: 8px 16px;
-//          background: transparent;
-//          border: 2px solid gray;
-//        }
-//      }
-//      &--block--two {
-//        position: relative;
-//        width: 306.17px;
-//        height: 220.86px;
-//        background: linear-gradient(180deg, rgba(79, 70, 186, 0.21) 0%, rgba(255, 255, 255, 0) 100%);
-//        border-radius: 6.63521px;
-//
-//        &__images {
-//          position: absolute;
-//          transform: rotate(47deg);
-//          left: 69px;
-//        }
-//      }
-//
-//      &--from {
-//        width: 169px;
-//        height: 99px;
-//        background: rgb(245, 241, 241);
-//        border-radius: 5.34151px;
-//        padding: 5px 5px;
-//        margin: 0 10px;
-//
-//        h3 {
-//          font-weight: 700;
-//          font-size: 26px;
-//          color: #000000;
-//        }
-//
-//        h6 {
-//          font-size: 10px;
-//          color: #8896A6;
-//        }
-//
-//        &__reach {
-//          display: flex;
-//          align-items: center;
-//
-//          p {
-//            font-size: 11px;
-//            font-weight: 600;
-//            color: #8896A6;
-//            padding: 0 5px;
-//          }
-//
-//          button {
-//            font-size: 12px;
-//            color: #2FE6C8;
-//            padding: 5px 14px;
-//            margin: 5px 20px;
-//            background: rgba(47, 230, 200, 0.37);
-//          }
-//
-//          &--imag {
-//            transform: rotate(44deg);
-//          }
-//        }
-//      }
-//
-//      &--blockss {
-//        display: flex;
-//        align-items: center;
-//      }
-//    }
-//
-//    &__navbar {
-//      display: flex;
-//      justify-content: space-between;
-//
-//      &--march {
-//        width: 132px;
-//        height: 95px;
-//        background: #FFFFFF;
-//        box-shadow: 0 3.79155px 117.538px rgba(0, 0, 0, 0.1);
-//        padding: 5px 5px;
-//        position: absolute;
-//        right: 110px;
-//        top: 122px;
-//
-//        p {
-//          font-size: 12px;
-//          color: #8896A6;
-//        }
-//
-//        h3 {
-//          font-weight: 700;
-//          font-size: 22px;
-//          color: #000000;
-//        }
-//
-//        button {
-//          font-size: 15px;
-//          color: #2FE6C8;
-//          padding: 7px 25px;
-//          margin: 5px 0;
-//          background: rgba(47, 230, 200, 0.37);
-//        }
-//      }
-//
-//      &--prof {
-//        &__profile {
-//          position: absolute;
-//          right: 30px;
-//          top: 310px;
-//          display: flex;
-//          align-items: center;
-//          width: 271.1px;
-//          height: 80.57px;
-//          background: #FFFFFF;
-//          box-shadow: 0 94.7887px 75.8309px rgba(0, 0, 0, 0.03), 0px 61.4371px 44.4103px rgba(0, 0, 0, 0.0227778), 0px 36.5112px 24.1536px rgba(0, 0, 0, 0.0182222), 0px 18.9577px 12.3225px rgba(0, 0, 0, 0.015), 0px 7.72352px 6.17882px rgba(0, 0, 0, 0.0117778), 0px 1.75535px 2.98409px rgba(0, 0, 0, 0.00722222);
-//          border-radius: 9.47887px;
-//          padding: 0 10px;
-//
-//          &--texts {
-//            flex-direction: column;
-//            padding: 0 7px;
-//
-//            h5 {
-//              font-weight: 700;
-//              font-size: 14.2183px;
-//              color: #3734A9;
-//            }
-//
-//            p {
-//              color: #757095;
-//              font-size: 14px;
-//            }
-//          }
-//        }
-//      }
-//
-//      &--photo {
-//        position: relative;
-//        bottom: 55px;
-//        right: 10px;
-//      }
-//    }
-//  }
-//
-//
-//
-//  }
-//
-//  }
 
 
 
