--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,146 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Poppins:wght@100;400;500;600;700;800&family=Russo+One&display=swap");
+@media (max-width: 1440px) {
+  .container {
+    width: 90%;
+  }
+  #plan .plan--lineBlog__circle3 {
+    width: 400px;
+    height: 400px;
+  }
+  #hero {
+    width: 1140px;
+  }
+}
+@media (max-width: 1200px) {
+  #hero .hero--right {
+    transform: rotate(359deg) !important;
+  }
+  #help .help--grow__ion {
+    width: 232px !important;
+    height: 332px !important;
+  }
+}
+@media (max-width: 1140px) {
+  #plan .plan--lineBlog {
+    width: 80% !important;
+  }
+  #our .our {
+    flex-direction: column;
+    padding: 20px 0;
+  }
+}
+@media (max-width: 1024px) {
+  #hero .hero {
+    flex-direction: column;
+  }
+  #hero .hero--right__navbar {
+    justify-content: flex-start !important;
+  }
+  #hero .hero--right__navbar--march {
+    right: 371px !important;
+  }
+  #hero .hero--right__navbar--prof__profile {
+    right: 296px !important;
+    display: none !important;
+  }
+  #all .all--pol {
+    flex-wrap: wrap;
+  }
+  #busy .busy--law h1 {
+    font-size: 25px !important;
+  }
+  #busy .busy--it__off {
+    width: 363px !important;
+    height: 350px !important;
+  }
+  #plan .plan--txtBlogTwo {
+    right: 231px !important;
+  }
+  #plan .plan--lineBlog img {
+    display: none;
+  }
+  #end .end--apple h1 {
+    font-size: 27px !important;
+  }
+  #hello .hello--ytyr__could p {
+    font-size: 24px !important;
+  }
+  #track .track--the h1 {
+    font-size: 30px !important;
+  }
+}
+@media (max-width: 992px) {
+  #fancy .fancy--box img {
+    width: 600px !important;
+    height: 305px !important;
+  }
+  #fancy .fancy--box__sky h1 {
+    font-size: 30px !important;
+  }
+}
+@media (max-width: 820px) {
+  #help .help--grow__ion {
+    padding: 15px 0;
+    width: 200px !important;
+    height: 240px !important;
+  }
+  #help .help--grow__ion h3 {
+    font-size: 22px !important;
+  }
+  #help .help--grow__ion p {
+    font-size: 10px !important;
+  }
+  #hello .hello--ytyr__could p {
+    font-size: 13px !important;
+  }
+  #plan .plan--txtBlog {
+    width: 235px !important;
+  }
+  #plan .plan--txtBlogTwo {
+    bottom: 190px !important;
+  }
+  #plan .plan--lineBlog .circle1 {
+    display: none;
+  }
+  #plan .plan--lineBlog .circle2 {
+    display: none;
+  }
+  #plan .plan--lineBlog .circle3 {
+    display: none;
+  }
+  #our {
+    padding: 40px 0 !important;
+  }
+  #our .our--post h1 {
+    font-size: 26px !important;
+  }
+}
+@media (max-width: 768px) {
+  #our .our--so__prins img {
+    width: 290px;
+    height: 240px;
+  }
+  #help .help {
+    flex-wrap: wrap !important;
+  }
+  #help .help--grow__ion h3 {
+    font-size: 20px !important;
+  }
+  #help .help--grow__ion p {
+    font-size: 10px !important;
+  }
+  #busy .busy--it {
+    flex-wrap: wrap;
+  }
+  #busy .busy--it__off h3 {
+    font-size: 20px !important;
+  }
+}
+@media (max-width: 648px) {
+  #hello .hello {
+    display: none;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -32,6 +174,10 @@ input {
 select {
   border: none;
   outline: none;
+}
+
+.scroll {
+  overflow: hidden;
 }
 
 #header {
